[package]
name = "ukf"
version = "0.1.0"
edition = "2021"
authors = ["Josef Biberstein"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/iamxanadu/rust-ukf.git"
description = """
An implementation of the unscented Kalman filter in rust which supports multiple different measurement updates.
"""
keywords = ["unscented", "Kalman", "filter", "algorithm"]
categories = ["algorithms"]
include = ["src/*", "scripts/*", "examples/*", "LICENSE", "README.md"]

[dependencies]
nalgebra = ">= 0.30.1"

[dev-dependencies]
ode_solvers = "0.3.6"
nalgebra = "0.30.1"
statrs = "0.15.0"
rand = "0.8.5"
